melhoria em tratativa de error